openexr-sys/openexr-c/include/imath_vec.h

typedef struct Imath_3_0__Vec4_double__t_s {
    double x;
    double y;
    double z;
    double w;
} OPENEXR_ALIGN(8) Imath_3_0__Vec4_double__t;
typedef Imath_3_0__Vec4_double__t Imath_V4d_t;
/** Normalize in place. If length()==0, return a null vector. */
OPENEXR_API unsigned int Imath_3_0__Vec4_double__normalize(
    Imath_V4d_t * this_
    , Imath_V4d_t const * * return_);
/** Normalize without any checks for length()==0. Slightly faster
than the other normalization routines, but if v.length() is
0.0, the result is undefined. */
OPENEXR_API unsigned int Imath_3_0__Vec4_double__normalizeNonNull(
    Imath_V4d_t * this_
    , Imath_V4d_t const * * return_);
/** Return a normalized vector. Does not modify *this. */
OPENEXR_API unsigned int Imath_3_0__Vec4_double__normalized(
    Imath_V4d_t const * this_
    , Imath_V4d_t * return_);
/** Return a normalized vector. Does not modify *this, and does
not check for length()==0. Slightly faster than the other
normalization routines, but if v.length() is 0.0, the result
is undefined. */
OPENEXR_API unsigned int Imath_3_0__Vec4_double__normalizedNonNull(
    Imath_V4d_t const * this_
    , Imath_V4d_t * return_);
/** Largest possible negative value */
OPENEXR_API unsigned int Imath_3_0__Vec4_double__baseTypeLowest(
    double * return_);
/** Largest possible positive value */
OPENEXR_API unsigned int Imath_3_0__Vec4_double__baseTypeMax(
    double * return_);
/** Smallest possible positive value */
OPENEXR_API unsigned int Imath_3_0__Vec4_double__baseTypeSmallest(
    double * return_);
/** Smallest possible e for which 1+e != 1 */
OPENEXR_API unsigned int Imath_3_0__Vec4_double__baseTypeEpsilon(
    double * return_);
/** Return the number of dimensions, i.e. 4 */
OPENEXR_API unsigned int Imath_3_0__Vec4_double__dimensions(
    unsigned int * return_);