openexr-sys/src/imath_vec.rs


pub fn Imath_3_0__Vec4_double__normalize(this_: *mut Imath_V4d_t, return_: *mut *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double__normalizeNonNull(this_: *mut Imath_V4d_t, return_: *mut *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double__normalized(this_: *const Imath_V4d_t, return_: *mut Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double__normalizedNonNull(this_: *const Imath_V4d_t, return_: *mut Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double__baseTypeLowest(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__baseTypeMax(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__baseTypeSmallest(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__baseTypeEpsilon(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__dimensions(return_: *mut c_uint) -> Exception;


} // extern "C"
